--- a/src/output.css
+++ b/src/output.css
@@ -556,8 +556,16 @@ video {
   --tw-contain-style:  ;
 }
 
+.m-10{
+  margin: 2.5rem;
+}
+
 .m-14{
   margin: 3.5rem;
+}
+
+.m-3{
+  margin: 0.75rem;
 }
 
 .flex{
@@ -570,6 +578,14 @@ video {
 
 .h-screen{
   height: 100vh;
+}
+
+.h-auto{
+  height: auto;
+}
+
+.w-auto{
+  width: auto;
 }
 
 .grid-cols-3{
@@ -592,12 +608,17 @@ video {
   justify-content: center;
 }
 
-.self-center{
-  align-self: center;
-}
-
 .justify-self-center{
   justify-self: center;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
+}
+
+.border-disabled-blue{
+  --tw-border-opacity: 1;
+  border-color: rgb(37 98 102 / var(--tw-border-opacity));
 }
 
 .bg-custom-background{
@@ -605,13 +626,13 @@ video {
   background-color: rgb(26 26 30 / var(--tw-bg-opacity));
 }
 
-.object-center{
-  -o-object-position: center;
-     object-position: center;
+.bg-custom-gray{
+  --tw-bg-opacity: 1;
+  background-color: rgb(39 40 43 / var(--tw-bg-opacity));
 }
 
-.text-center{
-  text-align: center;
+.p-2{
+  padding: 0.5rem;
 }
 
 .font-bevan{
@@ -621,6 +642,11 @@ video {
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
+}
+
+.text-xl{
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 .font-semibold{
@@ -635,6 +661,11 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-disabled-blue{
+  --tw-text-opacity: 1;
+  color: rgb(37 98 102 / var(--tw-text-opacity));
 }
 
 .tic-button{
@@ -694,7 +725,7 @@ video {
 }
 
 .restart-button{
-  margin: 2.5rem;
+  margin: 0.5rem;
   height: auto;
   width: auto;
   border-radius: 0.75rem;
@@ -713,4 +744,27 @@ video {
   background-color: rgb(22 189 202 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(39 40 43 / var(--tw-text-opacity));
+}
+
+.marker\:font-bevan *::marker{
+  font-family: Bevan, sans-serif;
+}
+
+.marker\:font-bevan::marker{
+  font-family: Bevan, sans-serif;
+}
+
+.hover\:bg-custom-blue:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(22 189 202 / var(--tw-bg-opacity));
+}
+
+.hover\:text-custom-gray:hover{
+  --tw-text-opacity: 1;
+  color: rgb(39 40 43 / var(--tw-text-opacity));
+}
+
+.disabled\:bg-red-500:disabled{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
