--- a/src/styles.css
+++ b/src/styles.css
@@ -12,5 +12,5 @@
     @apply text-disabled-blue rounded-xl scale-95 p-2 w-[85px] h-[85px] bg-custom-gray m-0.5 font-bevan text-5xl border-2 border-disabled-blue transition duration-300;
 }
 .restart-button{
-    @apply text-custom-blue rounded-xl p-2 w-auto h-auto hover:bg-custom-blue bg-custom-gray hover:text-custom-gray m-10 font-bevan text-xl;
+    @apply text-custom-blue rounded-xl p-2 w-auto h-auto hover:bg-custom-blue bg-custom-gray hover:text-custom-gray font-bevan text-xl m-2;
 }
