--- a/src/output.css
+++ b/src/output.css
@@ -576,12 +576,12 @@ video {
   display: grid;
 }
 
-.h-screen{
-  height: 100vh;
-}
-
 .h-auto{
   height: auto;
+}
+
+.h-screen{
+  height: 100vh;
 }
 
 .w-auto{
@@ -614,6 +614,15 @@ video {
 
 .rounded-xl{
   border-radius: 0.75rem;
+}
+
+.border-2{
+  border-width: 2px;
+}
+
+.border-custom-blue{
+  --tw-border-opacity: 1;
+  border-color: rgb(22 189 202 / var(--tw-border-opacity));
 }
 
 .border-disabled-blue{
@@ -649,8 +658,8 @@ video {
   line-height: 1.75rem;
 }
 
-.font-semibold{
-  font-weight: 600;
+.font-light{
+  font-weight: 300;
 }
 
 .text-custom-blue{
@@ -658,14 +667,14 @@ video {
   color: rgb(22 189 202 / var(--tw-text-opacity));
 }
 
-.text-white{
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
 .text-disabled-blue{
   --tw-text-opacity: 1;
   color: rgb(37 98 102 / var(--tw-text-opacity));
+}
+
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
 .tic-button{
@@ -744,27 +753,4 @@ video {
   background-color: rgb(22 189 202 / var(--tw-bg-opacity));
   --tw-text-opacity: 1;
   color: rgb(39 40 43 / var(--tw-text-opacity));
-}
-
-.marker\:font-bevan *::marker{
-  font-family: Bevan, sans-serif;
-}
-
-.marker\:font-bevan::marker{
-  font-family: Bevan, sans-serif;
-}
-
-.hover\:bg-custom-blue:hover{
-  --tw-bg-opacity: 1;
-  background-color: rgb(22 189 202 / var(--tw-bg-opacity));
-}
-
-.hover\:text-custom-gray:hover{
-  --tw-text-opacity: 1;
-  color: rgb(39 40 43 / var(--tw-text-opacity));
-}
-
-.disabled\:bg-red-500:disabled{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
